--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "https://json.schemastore.org/package",
   "name": "gbl-tools",
   "description": "Tools for parsing and uploading Gecko Bootloader images",
   "version": "1.0.1",
@@ -8,5 +9,8 @@
   },
   "exports": {
     ".": "./src/index.js"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^2.0.0"
   }
 }
